--- a/src/components/PlayerControls/styles.scss
+++ b/src/components/PlayerControls/styles.scss
@@ -3,6 +3,7 @@
     flex-direction: column;
     justify-content: flex-end;
     align-items: center;
+    gap: 1rem;
 
     position: absolute;
     bottom: 0;
@@ -10,12 +11,42 @@
     height: 150px;
     width: 100%;
 
-    padding: 1rem 0;
+    padding: 1rem;
 
     background: #07001c;
     color: #fff;
 
     border-top: 1px solid #2e363e;
+
+    z-index: 1000;
+
+    .player-nowplaying {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+
+        width: 100%;
+
+        .nowplaying-text {
+            font-size: 12px;
+
+            .nowtext-song {
+                color: #fff;
+                margin-bottom: .35rem;
+                font-weight: 600;
+            }
+        }
+
+        .nowplaying-icons {
+            display: flex;
+            align-items: center;
+            gap: .5rem;
+
+            svg {
+                height: 24px;
+            }
+        }
+    }
 
     .player-controls {
         display: flex;
@@ -40,7 +71,7 @@
             }
 
             &.play-pause svg {
-                width: 60px;
+                width: 54px;
                 background: #201a33;
                 border-radius: 100%;
                 padding: .5rem;
@@ -50,6 +81,78 @@
                 width: 24px;
             }
         }
+    }
+}
+
+.player-ambience {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 1rem;
+
+    position: absolute;
+    bottom: 0;
+
+    height: 150px;
+    width: 100%;
+
+    padding: 1rem;
+    overflow: hidden;
+
+    background: #07001c;
+    border-top: 1px solid #2e363e;
+
+    transition: all .2s;
+
+    .ambience-header {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+
+        width: 100%;
+
+        svg {
+            width: 24px;
+        }
+    }
+
+    .button-group {
+
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+
+        width: 100%;
+
+        .ambience-button {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: .5rem;
+
+            font-size: 12px;
+
+            svg {
+                height: 24px;
+                width: 24px;
+            }
+
+            &.active {
+
+                svg {
+                    color: #9c3cbb;
+                }
+
+                p {
+                    color: #9c3cbb;
+                }
+            }
+        }
+    }
+
+    &.open {
+        bottom: 150px;
     }
 }
 
