--- a/src/components/Sidebar/styles.scss
+++ b/src/components/Sidebar/styles.scss
@@ -12,7 +12,7 @@
 
     padding: 1rem;
 
-    padding-bottom: 105px;
+    padding-bottom: 150px;
 
     .sidebar-header {
         display: flex;
@@ -87,19 +87,20 @@
 
         width: 100%;
         overflow-y: scroll;
+        padding-bottom: 1rem;
 
         .track-list {
 
             display: flex;
             flex-direction: column;
             align-items: flex-start;
-            gap: 1rem;
+            gap: 1.25rem;
 
             height: 100%;
             width: 100%;
 
             .track {
-                font-size: 14px;
+                font-size: 13px;
                 cursor: pointer;
 
                 &.active {
