--- a/src/components/PlayerControls/styles.scss
+++ b/src/components/PlayerControls/styles.scss
@@ -131,11 +131,18 @@
             align-items: center;
             gap: .5rem;
 
-            font-size: 12px;
+            .button-clickarea {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                gap: .5rem;
 
-            svg {
-                height: 24px;
-                width: 24px;
+                font-size: 12px;
+
+                svg {
+                    height: 24px;
+                    width: 24px;
+                }
             }
 
             input[type='range'] {
