WIp: add songs to playlist library.

--- a/src/components/Sidebar/styles.scss
+++ b/src/components/Sidebar/styles.scss
@@ -75,6 +75,7 @@
         .playlist-next {
             background: none;
             border: none;
+            cursor: pointer;
         }
     }
 
