--- a/src/components/PlayerControls/styles.scss
+++ b/src/components/PlayerControls/styles.scss
@@ -8,7 +8,7 @@
     position: absolute;
     bottom: 0;
 
-    height: 150px;
+    height: 175px;
     width: 100%;
 
     padding: 1rem;
@@ -66,6 +66,10 @@
                 height: 24px;
             }
         }
+    }
+
+    .player-scrubber {
+        width: 100%;
     }
 
     .player-controls {
