--- a/src/components/Sidebar/styles.scss
+++ b/src/components/Sidebar/styles.scss
@@ -14,6 +14,8 @@
 
     padding-bottom: 175px;
 
+    z-index: 900;
+
     .sidebar-header {
         display: flex;
         align-items: center;
@@ -115,6 +117,7 @@
 @media screen and (min-width: 1024px) {
 
     .sidebar-styled {
+        width: 425px;
         margin-bottom: 80px;
     }
 }
