--- a/src/components/PlayerControls/styles.scss
+++ b/src/components/PlayerControls/styles.scss
@@ -101,8 +101,16 @@
                 padding: .5rem;
             }
 
-            &.loop-shuffle svg {
-                width: 24px;
+            &.loop-shuffle {
+                transition: transform .5s;
+
+                svg {
+                    width: 24px;
+                }
+
+                &.looping {
+                    transform: rotate(360deg);
+                }
             }
         }
     }
