--- a/src/components/Sidebar/styles.scss
+++ b/src/components/Sidebar/styles.scss
@@ -78,6 +78,10 @@
             background: none;
             border: none;
             cursor: pointer;
+
+            &.hidden {
+                visibility: hidden;
+            }
         }
     }
 
