Update: implement shuffle feature.

--- a/src/components/PlayerControls/styles.scss
+++ b/src/components/PlayerControls/styles.scss
@@ -108,7 +108,8 @@
                     width: 24px;
                 }
 
-                &.looping {
+                &.looping,
+                &.shuffled {
                     transform: rotate(360deg);
                 }
             }
